src/test/resources/ttml/test-suite/pass/dur003-pass.ttml
<?xml version="1.0" encoding="UTF-8"?>
<!-- DUR > IPD at t = 0 due to rendering -->
<!-- This can only be achieved with CJK characters, otherwise NGBS is exceeded before IPD is exceeded -->
<!-- DUR_T(E_n) = 1 + 1.85/15 * 1.85/15 * (41 / 0.6) > 1 -->
<tt xml:lang="en"
    xmlns="http://www.w3.org/ns/ttml"
    xmlns:tts="http://www.w3.org/ns/ttml#styling">
  <head>
    <styling>
      <style xml:id="s1" tts:backgroundColor="red" />
    </styling>
    <layout>
      <region xml:id="r1" style="s1"/>
    </layout>
  </head>
  <body>
    <div>
      <p begin="2.5s" end="3s">z</p>
      <p region="r1" begin="3s" end="4s"><span style="s1">a</span><span style="s1">b</span><span style="s1">c</span></p>
    </div>
  </body>
</tt>
